2011-10-07  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: If datadir is not set, use the disk
	  argument.

2011-10-07  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Do not free cwd.
	* common-src/amgetconf.pl: Allow to get one property.
	* installcheck/amgetconf.pl: Test it.

2011-10-05  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Retry in case of CURLE_SSL_CONNECT_ERROR error.

2011-10-04  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/gnutar.pl: Add support for fc14 and fc15.

2011-10-04  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: Do not crahs if amidxtaped close the
	  connection.

2011-10-04  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Correctly set thunk->next_marker.

2011-09-30 Dan Locks <dwlocks@zmanda.com>
	*  packaging/common/substitute.pl: fix PKG_REV missing message.
	*  packaging/sun-pkg/buildpkg, packaging/deb/buildpkg,
	   packaging/rpm/buildpkg: create PKG_REV file until the machinery to
	   process svn tags for PKG_REV is in place

2011-09-29 Dan Locks <dwlocks@zmanda.com>
	*  packaging/sun-pkg: sun package subdirectories
	*  packaging/sun-pkg/buildpkg: sun package building script
	*  packaging/common/mock_utils.sh: mocked utilities used by pre/post
	   scripts
	*  packaging/common/post_inst_functions.sh,
	   packaging/common/post_rm_functions.sh,
	   packaging/common/pre_inst_functions.sh,
	   packaging/common/common_functions.sh: shared shell functions for
	   pre/post scripts.
	*  packaging/common/substitute.pl: update to handle sun packages and
	   shell functions
	*  packaging/common/test_sh_libs.sh: unit tests for shell functions
	*  packaging/common/shunit2: unit test framework
	*  packaging/Makefile.am: add sun package to dist tarball.
	*  note: S3 device is not enabled; solaris compilation has me stumped.

2011-09-21  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Sam Stuck