@@ -1,3 +1,7 @@
+2011-10-12  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/driverio.c (update_info_dumper): Set date to 0 if
+	  datestamp is 0.
+
 2011-10-07  Jean-Louis Martineau <martineau@zmanda.com>
 	* application-src/ampgsql.pl: If datadir is not set, use the disk
 	  argument.
